fix(1146): removed explicit height and overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,14 +6,12 @@ html,
 body,
 #root {
   width: 100%;
+  height: 100%;
   padding: 0;
   margin: 0;
-  height: 100vh;
-  overflow: hidden;
 }
 
 main {
-  overflow: auto;
   height: 100%;
 }
 
